更新发现首页

--- a/demo/jglh/files/框架内容_11/styles.css
+++ b/demo/jglh/files/框架内容_11/styles.css
@@ -42,82 +42,6 @@
 #u1 {
   position:absolute;
   left:0px;
-  top:0px;
-  width:320px;
-  height:64px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u1_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:64px;
-}
-#u2 {
-  position:absolute;
-  left:2px;
-  top:24px;
-  width:316px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u3 {
-  position:absolute;
-  left:0px;
-  top:32px;
-  width:320px;
-  height:21px;
-  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
-  font-weight:700;
-  font-style:normal;
-  font-size:20px;
-  text-align:center;
-}
-#u3_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:21px;
-}
-#u4 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  word-wrap:break-word;
-}
-#u5 {
-  position:absolute;
-  left:6px;
-  top:5px;
-  width:308px;
-  height:13px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u5_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:308px;
-  height:13px;
-}
-#u6 {
-  position:absolute;
-  left:2px;
-  top:-2px;
-  width:304px;
-  visibility:hidden;
-  word-wrap:break-word;
-}
-#u7 {
-  position:absolute;
-  left:0px;
   top:64px;
   width:320px;
   height:820px;
@@ -126,14 +50,14 @@
   font-style:normal;
   font-size:12px;
 }
-#u7_img {
+#u1_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:820px;
 }
-#u8 {
+#u2 {
   position:absolute;
   left:2px;
   top:402px;
@@ -141,7 +65,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u9 {
+#u3 {
   position:absolute;
   left:0px;
   top:214px;
@@ -151,14 +75,14 @@
   font-weight:200;
   font-style:normal;
 }
-#u9_img {
+#u3_img {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
   height:75px;
 }
-#u10 {
+#u4 {
   position:absolute;
   left:2px;
   top:30px;
@@ -166,7 +90,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u11 {
+#u5 {
   position:absolute;
   left:264px;
   top:220px;
@@ -176,21 +100,21 @@
   font-weight:200;
   font-style:normal;
 }
-#u11_img {
+#u5_img {
   position:absolute;
   left:0px;
   top:0px;
   width:44px;
   height:44px;
 }
-#u12 {
+#u6 {
   position:absolute;
   left:2px;
   top:16px;
   width:40px;
   word-wrap:break-word;
 }
-#u13 {
+#u7 {
   position:absolute;
   left:260px;
   top:270px;
@@ -202,21 +126,21 @@
   font-size:12px;
   text-align:center;
 }
-#u13_img {
+#u7_img {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   height:12px;
 }
-#u14 {
+#u8 {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   word-wrap:break-word;
 }
-#u16 {
+#u10 {
   position:absolute;
   left:10px;
   top:465px;
@@ -228,21 +152,21 @@
   font-size:14px;
   color:#797979;
 }
-#u16_img {
+#u10_img {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:120px;
 }
-#u17 {
+#u11 {
   position:absolute;
   left:2px;
   top:53px;
   width:296px;
   word-wrap:break-word;
 }
-#u18 {
+#u12 {
   position:absolute;
   left:19px;
   top:555px;
@@ -255,21 +179,21 @@
   color:#666666;
   line-height:20px;
 }
-#u18_img {
+#u12_img {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
   height:20px;
 }
-#u19 {
+#u13 {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
   word-wrap:break-word;
 }
-#u21 {
+#u15 {
   position:absolute;
   left:10px;
   top:595px;
@@ -281,21 +205,21 @@
   font-size:14px;
   color:#797979;
 }
-#u21_img {
+#u15_img {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:120px;
 }
-#u22 {
+#u16 {
   position:absolute;
   left:2px;
   top:53px;
   width:296px;
   word-wrap:break-word;
 }
-#u23 {
+#u17 {
   position:absolute;
   left:19px;
   top:685px;
@@ -308,160 +232,160 @@
   color:#666666;
   line-height:20px;
 }
-#u23_img {
+#u17_img {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
   height:20px;
 }
-#u24 {
+#u18 {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
   word-wrap:break-word;
 }
-#u25 {
+#u19 {
   position:absolute;
   left:0px;
-  top:64px;
+  top:63px;
   width:320px;
-  height:150px;
+  height:151px;
   overflow:hidden;
 }
-#u25_state0 {
+#u19_state0 {
   position:absolute;
   left:0px;
   top:0px;
   width:320px;
-  height:150px;
+  height:151px;
   -ms-overflow-x:hidden;
   overflow-x:hidden;
   -ms-overflow-y:hidden;
   overflow-y:hidden;
   background-image:none;
 }
-#u25_state0_content {
+#u19_state0_content {
   position:absolute;
   left:0px;
   top:0px;
   width:1px;
   height:1px;
+}
+#u20 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+}
+#u20_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+}
+#u21 {
+  position:absolute;
+  left:2px;
+  top:69px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u19_state1 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+  visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u19_state1_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u22 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+}
+#u22_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+}
+#u23 {
+  position:absolute;
+  left:2px;
+  top:69px;
+  width:316px;
+  word-wrap:break-word;
+}
+#u19_state2 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+  visibility:hidden;
+  -ms-overflow-x:hidden;
+  overflow-x:hidden;
+  -ms-overflow-y:hidden;
+  overflow-y:hidden;
+  background-image:none;
+}
+#u19_state2_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u24 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+}
+#u24_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:151px;
+}
+#u25 {
+  position:absolute;
+  left:2px;
+  top:69px;
+  width:316px;
+  word-wrap:break-word;
 }
 #u26 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u26_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-}
-#u27 {
-  position:absolute;
-  left:2px;
-  top:68px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u25_state1 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-  visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u25_state1_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u28 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u28_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-}
-#u29 {
-  position:absolute;
-  left:2px;
-  top:68px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u25_state2 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-  visibility:hidden;
-  -ms-overflow-x:hidden;
-  overflow-x:hidden;
-  -ms-overflow-y:hidden;
-  overflow-y:hidden;
-  background-image:none;
-}
-#u25_state2_content {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:1px;
-  height:1px;
-}
-#u30 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
-  font-weight:200;
-  font-style:normal;
-}
-#u30_img {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:320px;
-  height:150px;
-}
-#u31 {
-  position:absolute;
-  left:2px;
-  top:68px;
-  width:316px;
-  word-wrap:break-word;
-}
-#u32 {
   position:absolute;
   left:6px;
   top:126px;
@@ -473,25 +397,25 @@
   font-size:48px;
   color:#FFFFFF;
 }
-#u32_img {
+#u26_img {
   position:absolute;
   left:0px;
   top:0px;
   width:31px;
   height:27px;
 }
-#u32_img.mouseOver {
+#u26_img.mouseOver {
 }
-#u32.mouseOver {
+#u26.mouseOver {
 }
-#u33 {
+#u27 {
   position:absolute;
   left:2px;
   top:-11px;
   width:27px;
   word-wrap:break-word;
 }
-#u34 {
+#u28 {
   position:absolute;
   left:282px;
   top:126px;
@@ -503,25 +427,25 @@
   font-size:48px;
   color:#FFFFFF;
 }
-#u34_img {
+#u28_img {
   position:absolute;
   left:0px;
   top:0px;
   width:31px;
   height:27px;
 }
-#u34_img.mouseOver {
+#u28_img.mouseOver {
 }
-#u34.mouseOver {
+#u28.mouseOver {
 }
-#u35 {
+#u29 {
   position:absolute;
   left:2px;
   top:-11px;
   width:27px;
   word-wrap:break-word;
 }
-#u36 {
+#u30 {
   position:absolute;
   left:14px;
   top:220px;
@@ -531,21 +455,21 @@
   font-weight:200;
   font-style:normal;
 }
-#u36_img {
+#u30_img {
   position:absolute;
   left:0px;
   top:0px;
   width:44px;
   height:44px;
 }
-#u37 {
+#u31 {
   position:absolute;
   left:2px;
   top:16px;
   width:40px;
   word-wrap:break-word;
 }
-#u38 {
+#u32 {
   position:absolute;
   left:10px;
   top:269px;
@@ -557,21 +481,21 @@
   font-size:12px;
   text-align:center;
 }
-#u38_img {
+#u32_img {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   height:12px;
 }
-#u39 {
+#u33 {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   word-wrap:break-word;
 }
-#u40 {
+#u34 {
   position:absolute;
   left:95px;
   top:220px;
@@ -581,21 +505,21 @@
   font-weight:200;
   font-style:normal;
 }
-#u40_img {
+#u34_img {
   position:absolute;
   left:0px;
   top:0px;
   width:44px;
   height:44px;
 }
-#u41 {
+#u35 {
   position:absolute;
   left:2px;
   top:16px;
   width:40px;
   word-wrap:break-word;
 }
-#u42 {
+#u36 {
   position:absolute;
   left:93px;
   top:269px;
@@ -607,21 +531,21 @@
   font-size:12px;
   text-align:center;
 }
-#u42_img {
+#u36_img {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   height:12px;
 }
-#u43 {
+#u37 {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   word-wrap:break-word;
 }
-#u44 {
+#u38 {
   position:absolute;
   left:179px;
   top:220px;
@@ -631,21 +555,21 @@
   font-weight:200;
   font-style:normal;
 }
-#u44_img {
+#u38_img {
   position:absolute;
   left:0px;
   top:0px;
   width:44px;
   height:44px;
 }
-#u45 {
+#u39 {
   position:absolute;
   left:2px;
   top:16px;
   width:40px;
   word-wrap:break-word;
 }
-#u46 {
+#u40 {
   position:absolute;
   left:177px;
   top:269px;
@@ -657,21 +581,21 @@
   font-size:12px;
   text-align:center;
 }
-#u46_img {
+#u40_img {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   height:12px;
 }
-#u47 {
+#u41 {
   position:absolute;
   left:0px;
   top:0px;
   width:50px;
   word-wrap:break-word;
 }
-#u48 {
+#u42 {
   position:absolute;
   left:45px;
   top:300px;
@@ -682,21 +606,21 @@
   font-style:normal;
   line-height:16px;
 }
-#u48_img {
+#u42_img {
   position:absolute;
   left:0px;
   top:0px;
   width:266px;
   height:32px;
 }
-#u49 {
+#u43 {
   position:absolute;
   left:0px;
   top:0px;
   width:266px;
   word-wrap:break-word;
 }
-#u50 {
+#u44 {
   position:absolute;
   left:5px;
   top:295px;
@@ -706,14 +630,14 @@
   font-weight:200;
   font-style:normal;
 }
-#u50_img {
+#u44_img {
   position:absolute;
   left:0px;
   top:0px;
   width:40px;
   height:40px;
 }
-#u51 {
+#u45 {
   position:absolute;
   left:2px;
   top:12px;
@@ -721,7 +645,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u52 {
+#u46 {
   position:absolute;
   left:10px;
   top:340px;
@@ -731,21 +655,21 @@
   font-weight:200;
   font-style:normal;
 }
-#u52_img {
+#u46_img {
   position:absolute;
   left:0px;
   top:0px;
   width:301px;
   height:90px;
 }
-#u53 {
+#u47 {
   position:absolute;
   left:2px;
   top:38px;
   width:297px;
   word-wrap:break-word;
 }
-#u54 {
+#u48 {
   position:absolute;
   left:10px;
   top:440px;
@@ -757,21 +681,21 @@
   font-size:12px;
   line-height:16px;
 }
-#u54_img {
+#u48_img {
   position:absolute;
   left:0px;
   top:0px;
   width:269px;
   height:16px;
 }
-#u55 {
+#u49 {
   position:absolute;
   left:0px;
   top:0px;
   width:269px;
   word-wrap:break-word;
 }
-#u57 {
+#u51 {
   position:absolute;
   left:10px;
   top:725px;
@@ -783,21 +707,21 @@
   font-size:14px;
   color:#797979;
 }
-#u57_img {
+#u51_img {
   position:absolute;
   left:0px;
   top:0px;
   width:300px;
   height:120px;
 }
-#u58 {
+#u52 {
   position:absolute;
   left:2px;
   top:53px;
   width:296px;
   word-wrap:break-word;
 }
-#u59 {
+#u53 {
   position:absolute;
   left:19px;
   top:815px;
@@ -810,17 +734,314 @@
   color:#666666;
   line-height:20px;
 }
-#u59_img {
+#u53_img {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
   height:20px;
 }
-#u60 {
+#u54 {
   position:absolute;
   left:0px;
   top:0px;
   width:234px;
+  word-wrap:break-word;
+}
+#u56 {
+  position:fixed;
+  left:0px;
+  bottom:20px;
+}
+#u56_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u56_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u57 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:50px;
+  font-family:'SimSun', '宋体';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+}
+#u57_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:50px;
+}
+#u58 {
+  position:absolute;
+  left:2px;
+  top:17px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u59 {
+  position:absolute;
+  left:20px;
+  top:3px;
+  width:32px;
+  height:32px;
+  font-family:'SimSun', 'SimSun';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u59_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u60 {
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:28px;
+  word-wrap:break-word;
+}
+#u61 {
+  position:absolute;
+  left:20px;
+  top:33px;
+  width:32px;
+  height:14px;
+  font-family:'MicrosoftYaHei', 'Microsoft YaHei';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+  text-align:center;
+}
+#u61_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:14px;
+}
+#u62 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  word-wrap:break-word;
+}
+#u63 {
+  position:absolute;
+  left:144px;
+  top:3px;
+  width:32px;
+  height:32px;
+  font-family:'SimSun', 'SimSun';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u63_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u64 {
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:28px;
+  word-wrap:break-word;
+}
+#u65 {
+  position:absolute;
+  left:144px;
+  top:33px;
+  width:32px;
+  height:14px;
+  font-family:'MicrosoftYaHei', 'Microsoft YaHei';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+  text-align:center;
+}
+#u65_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:14px;
+}
+#u66 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  word-wrap:break-word;
+}
+#u67 {
+  position:absolute;
+  left:268px;
+  top:3px;
+  width:32px;
+  height:32px;
+  font-family:'SimSun', 'SimSun';
+  font-weight:400;
+  font-style:normal;
+  font-size:12px;
+  color:#1E1E1E;
+}
+#u67_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:32px;
+}
+#u68 {
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:28px;
+  word-wrap:break-word;
+}
+#u69 {
+  position:absolute;
+  left:268px;
+  top:33px;
+  width:32px;
+  height:14px;
+  font-family:'MicrosoftYaHei', 'Microsoft YaHei';
+  font-weight:400;
+  font-style:normal;
+  font-size:10px;
+  color:#666666;
+  text-align:center;
+}
+#u69_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  height:14px;
+}
+#u70 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:32px;
+  word-wrap:break-word;
+}
+#u71 {
+  position:fixed;
+  left:0px;
+  top:0px;
+}
+#u71_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  background-image:none;
+}
+#u71_state0_content {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:1px;
+  height:1px;
+}
+#u72 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+}
+#u72_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:64px;
+}
+#u73 {
+  position:absolute;
+  left:2px;
+  top:24px;
+  width:316px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u74 {
+  position:absolute;
+  left:0px;
+  top:32px;
+  width:320px;
+  height:21px;
+  font-family:'STHeitiSC-Medium', 'Heiti SC Medium', 'Heiti SC';
+  font-weight:700;
+  font-style:normal;
+  font-size:20px;
+  text-align:center;
+}
+#u74_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  height:21px;
+}
+#u75 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:320px;
+  word-wrap:break-word;
+}
+#u76 {
+  position:absolute;
+  left:6px;
+  top:5px;
+  width:308px;
+  height:13px;
+  font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';
+  font-weight:200;
+  font-style:normal;
+}
+#u76_img {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:308px;
+  height:13px;
+}
+#u77 {
+  position:absolute;
+  left:2px;
+  top:-2px;
+  width:304px;
+  visibility:hidden;
   word-wrap:break-word;
 }
